cmake_minimum_required(VERSION 3.21)
project(mySolutions)

set(CMAKE_CXX_STANDARD 14)

add_executable(mySolutions
        ageSum.cpp
        arrayList.cpp
        base64encoding.cpp
        bf_interpreter.cpp
        deque.cpp
        hashDict.cpp
        matrixMul.cpp
        myContainer.cpp
        partialProduct.cpp
        printMatrix.cpp
        reverseLinkedList.cpp
        reverseNumber.cpp
        rotateMatrix.cpp
        sharedContainer.cpp
        sort.cpp
        UIDesign.cpp
        uniqueElement.cpp
        wordCounting.cpp
        XO.cpp
        z_transformation.cpp)
